[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.26", features = ["serde-str"] }
rust_decimal_macros = "1.26"
thiserror = "1.0" # Added for convenient error type implementation